# claude-nexus

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: nexus-agents.json  settings.json  verify.json
.claude-plugin/: marketplace.json
.github/workflows/: plugin-release-check.yml
build-src/conventions/: csharp.md  ef-core.md  testing.md
docs/: backlog.md  pipeline-hardening-findings.md  skill-backlog.md
docs/architecture/: README.md
docs/evidence/: 2026-06-11-omnishelf-job-fitness.md  2026-06-12-developer-skill-usage-audit.md
docs/ops/: nexus-cloud-session-setup.md
docs/plugin-feedback/: README.md  codex-2026-07-21.md  nexus-1.13.0-2026-06-17.md  nexus-1.34.8-2026-07-17.md  nexus-1.36.0-2026-07-18.md  nexus-1.8.2-2026-06-13.md  nexus-1.9.0-2026-06-14.md  nexus-1.9.1-2026-06-14.md  nexus-cpp-0.1.0-2026-07-02.md  omni-1.22.0-2026-07-05.md  omni-1.23.1-2026-07-07.md  omni-1.25.1-2026-07-12.md  omni-1.32.0-2026-07-14.md  omni-flutter-0.3.0-2026-07-04.md  omni-flutter-0.3.0-2026-07-12.md
docs/programs/: br-anchored-regeneration.md  idea-brs-as-behavioral-spec.md
docs/proposals/: 2026-07-18-nexus-analytics-am-lane.md  agent-grounding-memory-wiring.md  analytics-enforcement-value-layer-2026-07.md  boundary-detector-solo-ownership.md  boundary-detector-test-implementation-ownership.md  codex-verify-bug-ratio.md  cross-cutting-lessons-inbox.md  dotnet-skill-adoptions-2026-06.md  estate-authoring-skill-2026-07.md  mine-algorithm-2026-07.md  mine-design-2026-07.md  mine-family-next-wave-2026-07.md  mine-golden-render-2026-07.md  mine-machinery-borrow-wave-2-2026-07.md  mine-machinery-hardening-2026-07.md  mine-verify-automation-design.md  mine-verify-pass3-evaluation.md  mine-verify-pilot-method.md  mine-verify-repo.md  nexus-data-extension-2026-07.md  persona-for-nexus.md  plugin-authoring-and-versioning.md  plugin-evaluation-2026-06.md  proven-value-index-2026-07.md  research-kb.md  (+14 more)
harness/: README.md  cover-cpp.workflow.js  cover-flutter.workflow.js  cover-php.workflow.js  cover.workflow.js  loop-flutter.workflow.js  loop.workflow.js  merge.workflow.js  mine-verify.workflow.js  spec-cover-calc.workflow.js  spec-cover.workflow.js
harness/cpp/: CMakeLists.txt  Dockerfile  cover-cpp-contract.md  index_slice.py  mull.yml  parse_mull.py
harness/cpp/examples/: hungarian_smoke_test.cpp  levenshtein_smoke_test.cpp
scripts/: bump-plugin.mjs  compose-dotnet-agents.mjs  gen-commands.mjs  gen-nexus-dotnet.mjs  gen-omni.mjs  measure-read-cost.mjs  salience-report.mjs  scaffold-dotnet.mjs  selfcheck.mjs  skill-classification.md
tests/: README.md  helpers.mjs
(+1105 files in other folders)
